--- a/index.html
+++ b/index.html
@@ -20,7 +20,19 @@
             </ul>
         </div>
     </aside>
-    
+
+    <section id="wrapper-modal">
+        <div id="modal">
+            <img id="fechaModal" onclick="fechaModal()" src="https://th.bing.com/th/id/R4917db2a2d25feeb1cfcf5564e5f4c55?rik=3THDcyLwJ%2bKvkw&pid=ImgRaw" alt="" width="20px" height="20px">
+            <form>
+                <input type="text" id="receita" placeholder="Receita: ">
+                <input type="number" id="valor" placeholder="Valor: ">
+
+                <br>
+                <button id="submit">Adicionar despeza</button>
+            </form>
+        </div>
+    </section>
 
     <table class="tabelaPrincipal" border="1">
         <h2>Mes 1</h2>
