--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
     </section>
     <!--Tabela-->
-    <table class="tabelaPrincipal" border="1">
+    <table id="tabelaPrincipal" border="1">
         <h2 id="mes"></h2>
         <thead>
             <tr>
