--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <!--Menu Nav-->
+
     <h1 style="text-align: center;">Calculador de Despesas</h1>
     <aside>
         <div id="menu-opener">
@@ -22,21 +23,27 @@
             </ul>
         </nav>
     </aside>
+
     <!--Modal-->
+
     <section id="wrapper-modal">
         <div id="modal">
             <img id="fechaModal" onclick="fechaModal()" src="https://th.bing.com/th/id/R4917db2a2d25feeb1cfcf5564e5f4c55?rik=3THDcyLwJ%2bKvkw&pid=ImgRaw" alt="" width="20px" height="20px">
+
             <!--Form-->
+
             <form>
                 <input type="text" id="receita" name="txtReceita" placeholder="Receita: ">
-                <input type="number" id="valor" name="txtGanho" placeholder="Valor: ">
+                <input type="number" id="valor" name="numberValor" placeholder="Valor: ">
 
                 <br>
-                <input id="submit" onclick="armazenaDadosTabela(txtReceita.value, txtGanho.value)" type="submit" value="Adicionar Dispesa">
+                <input id="submit" onclick="armazenaDadosTabela(txtReceita.value, numberValor.value)" type="submit" value="Adicionar Dispesa">
             </form>
         </div>
     </section>
+
     <!--Tabela-->
+
     <table id="tabelaPrincipal" border="1">
         <h2 id="mes"></h2>
         <thead>
@@ -47,9 +54,7 @@
             </tr>
         </thead>
 
-        <tbody>
-          
-        </tbody>
+
 
     </table>
 
